--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="pickID"></div>
     <div id="scoreID"></div>
 
-    <button id="btn">Event Button</button>
+<!-- <button id="btn">Event Button</button> -->
     </div>
 
 </div>
